@@ -1,7 +1,12 @@
 Changes in version 1.3.1 (?? Mar 2007)
 
- - updated to latest PNG library (1.2.18), fixing a vulnerability and the odd
-   compile problem due to wrong defines.
+ - Some fixes in the 3d basic structures: plane3d.classifyPointRelation no
+   correctly returns the relation, it returned the opposite before. Also
+   renamed existsInterSection to existsIntersection for consistency.
+   triangle3d.isOnSameSide is now private - it's just a helper class not
+   intended for further use.
+
+ - updated to latest PNG library (1.2.18), fixing a vulnerability.
 
  - Changed the external window pointer from s32 to void*. This makes the
    mechanism 64bit safe, but also breaks the API. You have to cast to
